@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-16T02:18:58Z",
-  "count_outdated" : 264,
-  "uniques_outdated" : 230,
+  "timestamp" : "2025-06-21T02:06:22Z",
+  "count_outdated" : 265,
+  "uniques_outdated" : 231,
   "count" : 266,
   "uniques" : 232,
   "clones" : [
-    {
-      "timestamp": "2025-06-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-15T00:00:00Z",
       "count": 1,
